[gd_scene load_steps=18 format=2]

[ext_resource path="res://Menus/store/gun_store.gd" type="Script" id=1]
[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=2]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=3]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/UI/icons8-sort-right-100.png" type="Texture" id=5]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=6]
[ext_resource path="res://new_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/Weapons/he.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFont" id=3]
size = 28
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_size = 6

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.105882, 0.623529, 0.141176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_size = 6

[sub_resource type="DynamicFont" id=8]
size = 28
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.937255, 0.211765, 0.211765, 0.54902 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_size = 6

[node name="gun_store" type="CanvasLayer"]
script = ExtResource( 1 )
nade_img = ExtResource( 8 )

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.572549 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_left = 0.118
anchor_top = 0.943
anchor_right = 0.118
anchor_bottom = 0.943
margin_left = -55.04
margin_top = -19.96
margin_right = 54.96
margin_bottom = 20.04
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_desc" type="Panel" parent="."]
anchor_left = 0.653
anchor_top = 0.662
anchor_right = 0.653
anchor_bottom = 0.662
margin_left = -297.823
margin_top = -141.944
margin_right = 298.18
margin_bottom = 142.056
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="gun_desc"]
margin_left = 22.0
margin_top = 27.9499
margin_right = 520.0
margin_bottom = 161.95
custom_fonts/font = SubResource( 3 )
text = "efdfdf"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon_types" type="Panel" parent="."]
anchor_left = 0.181
anchor_top = 0.561
anchor_right = 0.181
anchor_bottom = 0.561
margin_left = -165.51
margin_top = -211.603
margin_right = 166.49
margin_bottom = 211.397
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="weapon_types"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.5
margin_top = -150.0
margin_right = 123.5
margin_bottom = 150.0
custom_constants/separation = 30
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="pistol" type="Button" parent="weapon_types/VBoxContainer"]
margin_right = 247.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "PISTOL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="smg" type="Button" parent="weapon_types/VBoxContainer"]
margin_top = 80.0
margin_right = 247.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "SMG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rifle" type="Button" parent="weapon_types/VBoxContainer"]
margin_top = 160.0
margin_right = 247.0
margin_bottom = 210.0
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "RIFLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nades" type="Button" parent="weapon_types/VBoxContainer"]
margin_top = 240.0
margin_right = 247.0
margin_bottom = 290.0
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "GRENADES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="armour" type="Button" parent="weapon_types/VBoxContainer"]
visible = false
margin_top = 320.0
margin_right = 247.0
margin_bottom = 370.0
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "ARMOUR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Panel" parent="."]
anchor_left = 0.65
anchor_top = 0.234
anchor_right = 0.65
anchor_bottom = 0.234
margin_left = -195.134
margin_top = -133.089
margin_right = 195.87
margin_bottom = 132.911
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="icon"]
margin_left = 4.0
margin_top = 4.0
margin_right = 387.0
margin_bottom = 262.0
expand = true
stretch_mode = 6

[node name="next_wpn" type="TextureButton" parent="icon"]
margin_left = 391.0
margin_right = 578.0
margin_bottom = 238.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prev_wpn" type="TextureButton" parent="icon"]
margin_right = 187.0
margin_bottom = 238.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="purchase" type="Button" parent="."]
anchor_left = 0.902
anchor_top = 0.936
anchor_right = 0.902
anchor_bottom = 0.936
margin_left = -75.1001
margin_top = -29.2681
margin_right = 74.8999
margin_bottom = 28.7319
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Puchase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="purchase_fail" type="PopupPanel" parent="."]
margin_left = 1730.53
margin_top = 367.836
margin_right = 2391.53
margin_bottom = 599.836
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="purchase_fail"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.5
margin_top = -114.0
margin_right = 328.5
margin_bottom = 114.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.803922, 0.678431, 0.909804, 1 )
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cash" type="Label" parent="."]
anchor_left = 0.198
anchor_top = 0.107
anchor_right = 0.198
anchor_bottom = 0.107
margin_left = -176.291
margin_top = -41.6489
margin_right = 175.709
margin_bottom = 42.351
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.113725, 0.478431, 0.0745098, 1 )
text = "$2000"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="weapon_types/VBoxContainer/pistol" to="." method="_on_pistol_pressed"]
[connection signal="pressed" from="weapon_types/VBoxContainer/smg" to="." method="_on_smg_pressed"]
[connection signal="pressed" from="weapon_types/VBoxContainer/rifle" to="." method="_on_rifle_pressed"]
[connection signal="pressed" from="weapon_types/VBoxContainer/nades" to="." method="_on_nades_pressed"]
[connection signal="pressed" from="weapon_types/VBoxContainer/armour" to="." method="_on_armour_pressed"]
[connection signal="pressed" from="icon/next_wpn" to="." method="_on_next_wpn_pressed"]
[connection signal="pressed" from="icon/prev_wpn" to="." method="_on_prev_wpn_pressed"]
[connection signal="pressed" from="purchase" to="." method="_on_purchase_pressed"]
